--- a/pages/contact.html
+++ b/pages/contact.html
@@ -12,9 +12,10 @@
 <body>
     <header>
         <div class="logo">
-            <span>Candle</span><span>F</span><img src="../images/candle-logo.png"><span>re</span>
+            <a href="../index.html">
+                <span>Candle</span><span>F</span><img src="/images/candle-logo.png"><span>re</span>
+            </a>
         </div>
-        
         <div class="hamburger active">
             <div class="bar"></div>
             <div class="bar"></div>
