--- a/pages/shop.html
+++ b/pages/shop.html
@@ -12,7 +12,9 @@
 <body>
     <header>
         <div class="logo">
-            <span>Candle</span><span>F</span><img src="../images/candle-logo.png"><span>re</span>
+            <a href="../index.html">
+                <span>Candle</span><span>F</span><img src="/images/candle-logo.png"><span>re</span>
+            </a>
         </div>
         <div class="search-bar">
             <input class="search-input" type="text" placeholder="Wyszukaj...">
