--- a/pages/contact.html
+++ b/pages/contact.html
@@ -40,7 +40,7 @@
                 <p>*Jeśli masz jakieś pytania napisz do nas. Odpowiemy najszybciej jak to możliwe.</p>
                 <textarea placeholder="Napisz wiadomość..."></textarea>
                 <label for="contact-email">Podaj E-mail</label>
-                <input name="contact-email" type="email" placeholder="JanKowalski@gmail.com">
+                <input class="bg-contact-left-ph" name="contact-email" type="email" placeholder="JanKowalski@gmail.com">
                 <input type="submit">
             </div>
             <div class="contact-right">
